--- a/new_venv/pyvenv.cfg
+++ b/new_venv/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = /Library/Frameworks/Python.framework/Versions/3.11/bin
+home = /usr/local/opt/python@3.13/bin
 include-system-site-packages = false
-version = 3.11.8
-executable = /Library/Frameworks/Python.framework/Versions/3.11/bin/python3.11
-command = /Library/Frameworks/Python.framework/Versions/3.11/bin/python3.11 -m venv /Users/kobieroberts/Desktop/Projects/ESB/new_venv
+version = 3.13.0
+executable = /usr/local/Cellar/python@3.13/3.13.0_1/Frameworks/Python.framework/Versions/3.13/bin/python3.13
+command = /usr/local/opt/python@3.13/bin/python3.13 -m venv /Users/kobieroberts/Desktop/Projects/ESB/new_venv
